# cargo-mkdist

./: .rustfmt.toml  Cargo.toml  DOCS.md  README.md  ДОКУМЕНТАЦИЯ.md
src/: build.rs  cfg.rs  cli.rs  main.rs  meta.rs  pkg.rs  stage.rs  tests.rs
src/pkg/: deb.rs  pac.rs  tar.rs
src/tests/: cfg.rs  meta.rs  pkg.rs  stage.rs
src/tests/pkg/: deb.rs  pac.rs
